--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
             </div>
         </nav>
     </header>
-    
+    <!-- debutons avec la heros section -->
+    <section class="hero">
+        <div class="section1">
+            <div class="sec1_text">
+                <h1>Welcome to Our E-commerce Site</h1>
+                <p>Discover the best products at unbeatable prices.</p>
+                <button class="btn">Shop Now</button>
+            </div>
+            <div class="sec1_img">
+                <img src="./assets/images/promo.png" alt="promotion">
+                <div class="tache"></div>
+            </div>
+        </div>
+    </section>
+    <!-- fin de la heros section -->
 </body>
 </html>
